tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_line_plot_plot_style.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListLinePlot[{1, 2, 3, 2, 1}, PlotStyle -> Green]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="1" stroke="#00FF00" stroke-width="15" points="472,1927 1199,1049 1927,171 2655,1049 3382,1927 "/>
<line x1="356.0" y1="1998.0" x2="3500.0" y2="1998.0" stroke="#666" stroke-width="5"/>
<line x1="618.0" y1="1998.0" x2="618.0" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="763.6" y1="1998.0" x2="763.6" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="909.1" y1="1998.0" x2="909.1" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1054.7" y1="1998.0" x2="1054.7" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1345.8" y1="1998.0" x2="1345.8" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1491.3" y1="1998.0" x2="1491.3" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1636.9" y1="1998.0" x2="1636.9" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="1782.4" y1="1998.0" x2="1782.4" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2073.6" y1="1998.0" x2="2073.6" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2219.1" y1="1998.0" x2="2219.1" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2364.7" y1="1998.0" x2="2364.7" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2510.2" y1="1998.0" x2="2510.2" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2801.3" y1="1998.0" x2="2801.3" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="2946.9" y1="1998.0" x2="2946.9" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="3092.4" y1="1998.0" x2="3092.4" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="3238.0" y1="1998.0" x2="3238.0" y2="1974.0" stroke="#666" stroke-width="5"/>
<line x1="472.4" y1="1998.0" x2="472.4" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="472.4" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="1200.2" y1="1998.0" x2="1200.2" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="1200.2" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="1928.0" y1="1998.0" x2="1928.0" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="1928.0" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="2655.8" y1="1998.0" x2="2655.8" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="2655.8" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="3383.6" y1="1998.0" x2="3383.6" y2="1958.0" stroke="#666" stroke-width="5"/>
<text x="3383.6" y="2118.8" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">5</text>
<line x1="356.0" y1="100.0" x2="356.0" y2="1998.0" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1839.8" x2="380.0" y2="1839.8" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1752.0" x2="380.0" y2="1752.0" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1664.1" x2="380.0" y2="1664.1" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1576.2" x2="380.0" y2="1576.2" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1400.5" x2="380.0" y2="1400.5" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1312.6" x2="380.0" y2="1312.6" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1224.7" x2="380.0" y2="1224.7" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1136.9" x2="380.0" y2="1136.9" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="961.1" x2="380.0" y2="961.1" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="873.3" x2="380.0" y2="873.3" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="785.4" x2="380.0" y2="785.4" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="697.5" x2="380.0" y2="697.5" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="521.8" x2="380.0" y2="521.8" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="433.9" x2="380.0" y2="433.9" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="346.0" x2="380.0" y2="346.0" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="258.2" x2="380.0" y2="258.2" stroke="#666" stroke-width="5"/>
<line x1="356.0" y1="1927.7" x2="396.0" y2="1927.7" stroke="#666" stroke-width="5"/>
<text x="308.8" y="1964.5" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.0</text>
<line x1="356.0" y1="1488.4" x2="396.0" y2="1488.4" stroke="#666" stroke-width="5"/>
<text x="308.8" y="1525.1" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1.5</text>
<line x1="356.0" y1="1049.0" x2="396.0" y2="1049.0" stroke="#666" stroke-width="5"/>
<text x="308.8" y="1085.8" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2.0</text>
<line x1="356.0" y1="609.6" x2="396.0" y2="609.6" stroke="#666" stroke-width="5"/>
<text x="308.8" y="646.4" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2.5</text>
<line x1="356.0" y1="170.3" x2="396.0" y2="170.3" stroke="#666" stroke-width="5"/>
<text x="308.8" y="207.0" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3.0</text>
</svg>
